--- a/android/kimproject/pubspec.yaml
+++ b/android/kimproject/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   animated_text_kit: ^4.2.2
   flutter_local_notifications: ^13.0.0
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
