--- a/android/kimproject/pubspec.yaml
+++ b/android/kimproject/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   animated_text_kit: ^4.2.2
   flutter_local_notifications: ^13.0.0
   rxdart: ^0.27.7
+  firebase_core: ^2.7.0
+  firebase_auth: ^4.2.9
+  cloud_firestore: ^4.4.3
 
 dev_dependencies:
   flutter_test:
