--- a/android/kimproject/pubspec.yaml
+++ b/android/kimproject/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^2.7.0
   firebase_auth: ^4.2.9
   cloud_firestore: ^4.4.3
+  firebase_database: ^10.0.14
 
 dev_dependencies:
   flutter_test:
