--- a/android/kimproject/pubspec.yaml
+++ b/android/kimproject/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^4.2.9
   cloud_firestore: ^4.4.3
   firebase_database: ^10.0.14
+  firebase_storage: ^11.0.16
 
 dev_dependencies:
   flutter_test:
