--- a/android/kimproject/pubspec.yaml
+++ b/android/kimproject/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_database: ^10.0.14
   firebase_storage: ^11.0.16
   image_picker: ^0.8.7+5
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
