--- a/android/kimproject/android/app/src/main/AndroidManifest.xml
+++ b/android/kimproject/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.kimproject">
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.CAMERA" ></uses-permission>
    <application
         android:label="F.R CCTV"
         android:name="${applicationName}"
