--- a/android/kimproject/android/app/src/main/AndroidManifest.xml
+++ b/android/kimproject/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.example.kimproject">
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.CAMERA" ></uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
    <application
         android:label="F.R CCTV"
         android:name="${applicationName}"
