--- a/android/kimproject/pubspec.yaml
+++ b/android/kimproject/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_storage: ^11.0.16
   image_picker: ^0.8.7+5
   permission_handler: ^10.2.0
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
