--- a/android/kimproject/pubspec.yaml
+++ b/android/kimproject/pubspec.yaml
@@ -36,15 +36,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   animated_text_kit: ^4.2.2
-  flutter_local_notifications: ^13.0.0
-  rxdart: ^0.27.7
-  firebase_core: ^2.7.0
-  firebase_auth: ^4.2.9
-  cloud_firestore: ^4.4.3
-  firebase_database: ^10.0.14
-  firebase_storage: ^11.0.16
-  image_picker: ^0.8.7+5
-  permission_handler: ^10.2.0
+  flutter_local_notifications: ^17.1.2
+  rxdart: ^0.28.0
+  firebase_core: ^3.1.1
+  firebase_auth: ^5.1.1
+  cloud_firestore: ^5.0.2
+  firebase_database: ^11.0.2
+  firebase_storage: ^12.1.0
+  image_picker: ^1.1.2
+  permission_handler: ^11.3.1
   path_provider: ^2.0.15
   sliding_sheet: ^0.5.2
 
@@ -57,7 +57,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
   font_awesome_flutter: ^10.1.0
 
 # For information on the generic Dart part of this file, see the
